fixed search bar z-index and CSS selector specificity

--- a/source/components/ui/msm-navbar/msm-navbar.scss
+++ b/source/components/ui/msm-navbar/msm-navbar.scss
@@ -75,6 +75,7 @@
     flex: auto;
     height: 60px;
     position: relative;
+    z-index: 3;
   }
 
   .search-icon {
